HW23/src/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: "500m"      # Ограничение по CPU 
        memory: "256Mi"  # Ограничение по RA
      requests:
        cpu: "250m"      # Минимальный CPU
        memory: "128Mi"  # Минимальный RAM 
    volumeMounts:
    - name: nginx-config
      mountPath: /etc/nginx/conf.d
  volumes:
  - name: nginx-config
    configMap:
      name: nginx-config
